[project]
name = "prem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "kuzu>=0.11.2",
    "opencv-python>=4.12.0.88",
    "robyn>=0.72.0",
    "scenedetect>=0.6.6",
    "sentence-transformers>=5.1.0",
]
